2009-06-26  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui/Ide.cs:
	* MonoDevelop.Ide.Gui/IdePreferences.cs: Get the default
	  msbuild file format from a const property.

2009-06-26  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui/Ide.cs: Upgrade to latest msbuild
	  version when a new MD version is installed.

2009-06-26  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui/IdePreferences.cs: Changed default
	  format to VS2008.

2009-06-25  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectReferenceNodeBuilder.cs:
	  Use new project reference icons.

2009-06-25  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui.OptionPanels/AuthorInformationPanel.cs:
	  Use the new api for accessing user properties of a solution.

	* MonoDevelop.Ide.Gui/RootWorkspace.cs: Load/Save user
	  properties for projects and solutions.

2009-06-23  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Gui/Ide.cs:
	* MonoDevelop.Ide.Gui/Document.cs:
	* MonoDevelop.Ide.Gui/Workbench.cs:
	* MonoDevelop.Ide.Gui/IdeStartup.cs:
	* MonoDevelop.Ide.Gui/DefaultWorkbench.cs:
	* MonoDevelop.Ide.Gui/DocumentSwitcher.cs:
	* MonoDevelop.Ide.Gui.Pads/FileListItem.cs:
	* MonoDevelop.Ide.Commands/FileCommands.cs:
	* MonoDevelop.Ide.Gui.Dialogs/GoToDialog.cs:
	* MonoDevelop.Ide.Gui/AddinUpdateHandler.cs:
	* MonoDevelop.Ide.Templates/FileTemplate.cs:
	* MonoDevelop.Ide.Gui/SdiWorkspaceWindow.cs:
	* MonoDevelop.Ide.Gui/SdiWorkspaceLayout.cs:
	* MonoDevelop.Ide.FindInFiles/FileProvider.cs:
	* MonoDevelop.Ide.FindInFiles/SearchResultWidget.cs:
	* MonoDevelop.Ide.Gui.Content/TextEditorProperties.cs:
	* MonoDevelop.Ide.Gui.Dialogs/IncludeNewFilesDialog.cs:
	* MonoDevelop.Ide.CodeTemplates/CodeTemplateService.cs:
	* MonoDevelop.Ide.CodeFormatting/CodeFormattingCommands.cs:
	* MonoDevelop.Ide.Templates/SingleFileDescriptionTemplate.cs:
	* MonoDevelop.Ide.Gui.Pads.ProjectPad/SystemFileNodeBuilder.cs: